--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,105 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+/*---------------------------------------*/
+
+
+/* Base */
+
+
+/*---------------------------------------*/
+
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+html {
+    background-color: #fff;
+    color: rgb(59, 59, 59);
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    text-rendering: optimizeLegibility;
+}
+
+p {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+}
+
+h1 {
+    font-size: 5rem;
+    width: 100%;
+    text-align: center;
+    text-transform: center;
+}
+
+button {
+    font-size: 2rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 20px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 0px;
+    margin-bottom: 20px;
+    margin-top: 0;
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+    -ms-flex-item-align: end;
+    align-self: flex-end;
+    height: 70%;
+    margin-left: .5rem;
+}
+
+button:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+button {
+    color: #fff;
+    border: 3px solid #fff;
+    margin-top: 0;
+    margin-bottom: 0 !important;
+    background-color: #000;
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+}
+
+form {
+    width: 80%;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
+.todo-input {
+    width: 20rem;
+    font-size:2rem; 
+}
+.todo-text{
+  display:flex; 
+  margin: auto; 
+padding-left:1rem; 
+  text-align:left; 
+  width:100%; 
+  font-size:2rem; 
+}
+ul{
+  display:flex; 
+  width: 80%; 
+  margin:auto; 
+  flex-direction:column; 
+  margin-top:2rem; 
+
+}
+
+li{
+  display:flex; 
+  width:100%; 
+  flex-direction:row; 
 }
